--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "hospital frontdesk",
   "engines": {
-    "node": "7.10.0"
+    "node": "7.10.0",
+    "npm": "5.0.4",
+    "yarn": "0.24.6"
   },
   "scripts": {
     "build": "cd client && npm install && npm run build && cd ..",
