--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "hospital frontdesk",
+  "name": "hospital_frontdesk",
   "engines": {
     "node": "7.10.0"
   },
   "scripts": {
-    "build": "cd client && npm install && npm run build && cd ..",
+    "build": "cd client && yarn && yarn run build && cd ..",
     "deploy": "cp -a client/build/. public/",
-    "postinstall": "npm run build && npm run deploy && echo 'Client built!'"
+    "postinstall": "yarn run build && yarn run deploy && echo 'Client built!'"
   }
 }
