--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.2",
     "bootstrap": "3",
     "bootswatch": "^3.3.7",
+    "classnames": "^2.2.5",
     "jquery": "^3.2.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
